docs/website/content/docs/v0.9.1/sdk/api/index.mdx
---
title: "@qvac/sdk"
titleStyle: code
description: API reference — v0.9.1
---

## Overview

`@qvac/sdk` npm package exposes a function-centric, typed JS API.

## Functions

| Function | Summary | Signature |
| --- | --- | --- |
| [`cancel()`](./cancel) | Cancels an ongoing operation. | `cancel(params: { modelId: string; operation: "inference" } \| { clearCache?: boolean; delegate?: { healthCheckTimeout?: number; providerPublicKey: string; timeout?: number; topic: string }; downloadKey: string; operation: "downloadAsset" } \| { operation: "rag"; workspace?: string } \| { modelId: string; operation: "embeddings" }): Promise` |
| [`close()`](./close) | No description available | `close(): Promise` |
| [`completion()`](./completion) | Generates completion from a language model based on conversation history. | `completion(params: CompletionParams): CompletionRun` |
| [`defineDuplexHandler()`](./defineDuplexHandler) | No description available | `defineDuplexHandler(definition: DuplexPluginHandlerDefinition): PluginHandlerDefinition` |
| [`defineHandler()`](./defineHandler) | Helper function to define a handler with full type inference. | `defineHandler(definition: PluginHandlerDefinition): PluginHandlerDefinition` |
| [`definePlugin()`](./definePlugin) | Helper function to define a plugin with full type inference. | `definePlugin(plugin: T): T` |
| [`deleteCache()`](./deleteCache) | Deletes KV cache files. | `deleteCache(params: { all: true } \| { kvCacheKey: string; modelId?: string }): Promise` |
| [`diffusion()`](./diffusion) | Generate images using a loaded diffusion model. | `diffusion(params: DiffusionClientParams): DiffusionResult` |
| [`downloadAsset()`](./downloadAsset) | Downloads an asset (model file) without loading it into memory. | `downloadAsset(options: DownloadAssetOptions, rpcOptions?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`embed()`](./embed) | Generates embeddings for a single text using a specified model. | `embed(params: { modelId: string; text: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`finetune()`](./finetune) | Starts, resumes, inspects, pauses, or cancels a finetuning job for a loaded model. | `finetune(params: { modelId: string; operation?: "start" \| "resume"; options: { assistantLossOnly?: boolean; batchSize?: number; chatTemplatePath?: string; checkpointSaveDir?: string; checkpointSaveSteps?: number; contextLength?: number; learningRate?: number; loraAlpha?: number; loraInitStd?: number; loraModules?: string; loraRank?: number; loraSeed?: number; lrMin?: number; lrScheduler?: "constant" \| "cosine" \| "linear"; microBatchSize?: number; numberOfEpochs?: number; outputParametersDir: string; trainDatasetDir: string; validation: { type: "none" } \| { fraction?: number; type: "split" } \| { path: string; type: "dataset" }; warmupRatio?: number; warmupRatioSet?: boolean; warmupSteps?: number; warmupStepsSet?: boolean; weightDecay?: number } }, rpcOptions?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): FinetuneHandle` |
| [`getLogger()`](./getLogger) | No description available | `getLogger(namespace: string, options?: LoggerOptions): Logger` |
| [`getModelByName()`](./getModelByName) | No description available | `getModelByName(name: string): RegistryItem \| undefined` |
| [`getModelByPath()`](./getModelByPath) | No description available | `getModelByPath(registryPath: string): RegistryItem \| undefined` |
| [`getModelBySrc()`](./getModelBySrc) | No description available | `getModelBySrc(modelId: string, blobCoreKey: string): RegistryItem \| undefined` |
| [`getModelInfo()`](./getModelInfo) | No description available | `getModelInfo(params: { name: string }): Promise` |
| [`heartbeat()`](./heartbeat) | Checks if a delegated provider is online by sending a heartbeat round-trip. | `heartbeat(params?: { delegate?: { healthCheckTimeout?: number; providerPublicKey: string; timeout?: number; topic: string } }): Promise` |
| [`invokePlugin()`](./invokePlugin) | Invoke a non-streaming plugin handler. | `invokePlugin(options: InvokePluginOptions, rpcOptions?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`invokePluginStream()`](./invokePluginStream) | Invoke a streaming plugin handler. | `invokePluginStream(options: InvokePluginOptions, rpcOptions?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): AsyncGenerator` |
| [`loadModel()`](./loadModel) | Loads a machine learning model from a local path, remote URL, or Hyperdrive key. | `loadModel(options: LoadModelOptions, rpcOptions?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`loggingStream()`](./loggingStream) | Opens a logging stream to receive real-time logs. | `loggingStream(params: { id: string }): AsyncGenerator` |
| [`modelRegistryGetModel()`](./modelRegistryGetModel) | No description available | `modelRegistryGetModel(registryPath: string, registrySource: string): Promise` |
| [`modelRegistryList()`](./modelRegistryList) | No description available | `modelRegistryList(): Promise` |
| [`modelRegistrySearch()`](./modelRegistrySearch) | No description available | `modelRegistrySearch(params: ModelRegistrySearchParams): Promise` |
| [`ocr()`](./ocr) | Performs Optical Character Recognition (OCR) on an image to extract text. | `ocr(params: OCRClientParams): { blocks: Promise<{ bbox?: [number, number, number, number]; confidence?: number; text: string }[]>; blockStream: AsyncGenerator<{ bbox?: [number, number, number, number]; confidence?: number; text: string }[]>; stats: Promise<{ detectionTime?: number; recognitionTime?: number; totalTime?: number } \| undefined> }` |
| [`ragChunk()`](./ragChunk) | Chunks documents into smaller pieces for embedding. | `ragChunk(params: { chunkOpts?: { chunkOverlap?: number; chunkSize?: number; chunkStrategy?: "character" \| "paragraph"; splitStrategy?: "character" \| "word" \| "token" \| "sentence" \| "line" }; documents: string \| string[] }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragCloseWorkspace()`](./ragCloseWorkspace) | Closes a RAG workspace, releasing in-memory resources (Corestore, HyperDB adapter, RAG instance). | `ragCloseWorkspace(params?: { deleteOnClose?: boolean; workspace?: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragDeleteEmbeddings()`](./ragDeleteEmbeddings) | Deletes document embeddings from the RAG vector database. | `ragDeleteEmbeddings(params: { ids: string[]; modelId?: string; workspace?: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragDeleteWorkspace()`](./ragDeleteWorkspace) | Deletes a RAG workspace and all its data. | `ragDeleteWorkspace(params: { workspace: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragIngest()`](./ragIngest) | Ingests documents into the RAG vector database. | `ragIngest(params: RagIngestParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragListWorkspaces()`](./ragListWorkspaces) | Lists all RAG workspaces with their open status. | `ragListWorkspaces(options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragReindex()`](./ragReindex) | Reindexes the RAG database to optimize search performance. | `ragReindex(params: RagReindexParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragSaveEmbeddings()`](./ragSaveEmbeddings) | Saves pre-embedded documents to the RAG vector database. | `ragSaveEmbeddings(params: RagSaveEmbeddingsParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`ragSearch()`](./ragSearch) | Searches for similar documents in the RAG vector database. | `ragSearch(params: { modelId: string; n?: number; query: string; topK?: number; workspace?: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`resume()`](./resume) | Resumes the SDK runtime: restores all suspended Hyperswarm and Corestore
resources and releases the lifecycle gate so all SDK operations are allowed
again. | `resume(): Promise` |
| [`startQVACProvider()`](./startQVACProvider) | Starts a provider service that offers QVAC capabilities to remote peers. | `startQVACProvider(params: { firewall?: { mode: "allow" \| "deny"; publicKeys: string[] }; topic: string }): Promise` |
| [`state()`](./state) | Returns the current runtime lifecycle state. | `state(): Promise` |
| [`stopQVACProvider()`](./stopQVACProvider) | Stops a running provider service and leaves the specified topic. | `stopQVACProvider(params: { topic: string }): Promise` |
| [`suspend()`](./suspend) | Suspends the SDK runtime: pauses all registered Hyperswarm and Corestore
resources and engages the lifecycle gate so non-lifecycle operations are
blocked until `resume()` is called. | `suspend(): Promise` |
| [`textToSpeech()`](./textToSpeech) | No description available | `textToSpeech(params: { inputType: string; modelId: string; stream: boolean; text: string }, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): { buffer: Promise<number[]>; bufferStream: AsyncGenerator<number>; done: Promise<boolean> }` |
| [`transcribe()`](./transcribe) | Transcribe audio and return the complete text. | `transcribe(params: TranscribeClientParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): Promise` |
| [`transcribeStream()`](./transcribeStream) | No description available | `transcribeStream(params: TranscribeClientParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): AsyncGenerator` |
| [`translate()`](./translate) | Translates text from one language to another using a specified translation model. | `translate(params: TranslateClientParams, options?: { forceNewConnection?: boolean; healthCheckTimeout?: number; profiling?: { enabled?: boolean; includeServerBreakdown?: boolean; mode?: "summary" \| "verbose" }; timeout?: number }): { stats: Promise<{ cacheTokens?: number; decodeTime?: number; encodeTime?: number; timeToFirstToken?: number; tokensPerSecond?: number; totalTime?: number; totalTokens?: number } \| undefined>; text: Promise<string>; tokenStream: AsyncGenerator<string> }` |
| [`unloadModel()`](./unloadModel) | Unloads a previously loaded model from the server. | `unloadModel(params: { clearStorage?: boolean; modelId: string }): Promise` |

## Errors

See [Errors](./errors) for the full list of SDK error codes.
